# learning_github

./: .coverage  README.md  coverage_report.json  environment.yml  index.html  pyproject.toml  start.txt  tests_report.json
.github/badges/: generate_cov_and_test_badges.py  generate_notebook_badge.py  generate_pylint_badge.py
.github/workflows/: deploy_docs.yml  first_now_obsolete.yml.old  test_badges_docs-main.yml  test_workflow.yml
docs/: index.html
mypackage.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_0.py
